--- a/index.html
+++ b/index.html
@@ -1,7 +1,123 @@
 <!doctype html>
 <html lang="en-US">
 <head>
-    <link rel="stylesheet" type="text/css" href="singlePageTemplate.css">
+    <style>
+      .hero {
+	max-width: 100%;
+	height: auto;
+   	margin: 0;
+   	padding: 0;
+   	background-color: white;
+   	top: 0;
+   	left: 0;
+	display: flex;
+	justify-content: center;
+	overflow: hidden;
+}
+
+h1 {
+	font-family: PT Sans;
+	font-size: 60px;
+}
+
+h2 {
+	font-family: PT Sans;
+	font-size: 50px;
+}
+
+p {
+	font-family: PT Sans;
+	line-height: 40px;
+	font-size: 24px;
+}
+
+ul {
+	text-align: center;
+	list-style-position: inside;
+	font-family: PT Sans;
+	line-height: 40px;
+	font-size: 24px;
+}
+
+.about {
+	display: block;
+	text-align: center;
+	max-width: 60%;
+	justify-content: center;
+	margin-left: 20%;
+	margin-right: 20%;
+	margin-top: 4em;
+	margin-bottom: 6em;
+}
+
+.videos {
+	display: block;
+	text-align: center;
+	max-width: 60%;
+	margin-left: 20%;
+	margin-right: 20%;
+	justify-content: center;
+	text-align: center;
+}
+
+.vid-container {
+    float: left;
+	object-position: center;
+}
+
+.wrapper {
+	display: grid;
+	grid-template-columns: repeat(3, 1fr);
+	grid-gap: 3em;
+	margin: 0 auto;
+	justify-content: center;
+	max-width: 95%;
+	overflow-x: hidden;
+	margin-bottom: 6em;
+}
+
+.video-container {
+    position: relative;
+    padding-bottom: 56.25%;
+    padding-top: 35px;
+    height: 0;
+    overflow: hidden;
+}
+
+.video-container iframe {
+    position: absolute;
+    top:0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+}
+
+@media screen and (min-width: 400px) {
+	.wrapper {
+		grid-template-columns: repeat(1, 1fr);
+		align-self: center;
+	}
+}
+
+@media screen and (min-width: 700px) {
+	.wrapper {
+		grid-template-columns: repeat(2,1fr);
+		align-self: center;
+	}
+}
+
+@media screen and (min-width: 1000px) {
+	.wrapper {
+		grid-template-columns: repeat(3,1fr);
+		align-self: center;
+	}
+}
+
+.tour {
+	margin-left: 2em;
+	margin-right: 2em;
+}
+</style>
 <meta charset="UTF-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1">
