--- a/portfolio.html
+++ b/portfolio.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en-US">
 <head>
-    <link rel="stylesheet" type="text/css" href="assets/css/style.css">
+    <link rel="stylesheet" type="text/css" href="assets/css/portfolio-site.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <meta charset="UTF-8">
     <title>Portfolio</title>
